# adbot

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
apps/api/: requirements.txt
apps/api/app/: config.py  main.py
apps/api/app/db/: base.py  vector.py
apps/api/app/db/models/: chunk.py  chunk_embedding.py  project.py  source_object.py
apps/api/app/retrieval/: retriever.py
apps/api/app/routes/: chat.py  projects.py
apps/api/app/services/: embeddings.py  rag_pipeline.py  reranker.py
apps/api/tests/: conftest.py  test_projects_and_chat.py  test_reranker.py  test_vector_retriever.py
apps/ui/: Home.py
apps/ui/.streamlit/: config.toml
apps/ui/pages/: 1_Chat.py  2_Dashboard.py
apps/ui/services/: api_client.py
docs/: architecture.md
infra/: docker-compose.yml
infra/docker/: api.Dockerfile  ui.Dockerfile
scripts/: benchmark_reranker.py  bootstrap_db.py  run_tests.py  test_api.ps1
