[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adbot"
version = "0.1.0"
description = "Project-aware admin chatbot API and UI"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["apps/api", "apps/ui"]
